fixed some layout issues

--- a/src/components/company/style.css
+++ b/src/components/company/style.css
@@ -2,9 +2,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background: yellow;
+    background: #282c34;
     margin: auto;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
+    box-sizing: border-box;
+    color: white;
 }
 
 h1{
@@ -17,17 +19,30 @@ h3{
     margin:0;
 }
 .ceo{
-    margin-top:0;
+    padding-bottom: 10px;
+    margin-top:5px;
     display:flex;
-    /* justify-content:space-evenly; */
     width:134px;
     text-align: center; 
-    /* background:'purple'; */
     margin:auto;
 }
 .summary{
-    width: 415px;
-    display: flex;
+    width: 100%;
     margin: auto;
     text-align: left;
+    box-sizing: border-box;
+    padding: 25px;
+}
+@media only screen and (min-width: 700px) {
+    .summary {
+      width: 50%;
+
+    }
+  }
+
+.pic{
+    width: 10%;
+    /* text-align: center; */
+    display: block;
+    margin: auto;
 }
